--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -3927,7 +3927,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
   }
 }
 .navbar-default {
-  background-color: #826258;
+  background-color: #CEAD7A;
   border-color: none;
 }
 .navbar-default .navbar-brand {
