--- a/css/app.css
+++ b/css/app.css
@@ -33,11 +33,15 @@ iframe {
 	height: 35px;}
 
 #cll_footer {
-	margin-top: 28px;
+	margin-bottom: 28px;
 	text-align: center;
 	font-size: 90%;}
 
-.cll_image img {width: 90%;}
+.cll_image img {
+	display: block;
+	max-width: 90%;
+	max-height: 500px;}
+
 #cll_menu_download img {width: 5%}
 
 .cll-side-med li {
