--- a/css/app.css
+++ b/css/app.css
@@ -22,6 +22,7 @@
 }
 
 .cll_home_desc {margin: 10px 6px;}
+#cll_welcome_pic img {max-width: 98%; padding-top: 25px;}
 
 .cll_home_desc .cll_home_desc_header {
 	text-align: center; 
